# blender_data_sampling

./: .gitignore  Pipfile  README.md  blender_runner.py  main.py  pyproject.toml  teknofest.py  teknofest_bboxes.json
blender_data_sampling/: __init__.py  blender_helpers.py  blender_runtime.py  cli.py  common.py  config.py  contracts.py  export.py  launcher.py
config/teknofest/: params.yaml  tst.py
docs/reviews/: 2026-03-15-code-and-architecture-review.md
resources/teknofest/: SVM_mist_classifier_teknofest.sav
resources/teknofest/mist_learning/: SVM_learning.ipynb
scenes/sauvc/2026/: README.md  config.yaml
scenes/teknofest/2024/: config.yaml
scenes/teknofest/2024/resources/mist_learning/: geometry.txt
tests/: test_cli.py  test_config.py  test_export.py
utils/: SampleData.py  get_edges.py  objects_in_view.py  rendering.py
